objects/USA_Billboards__c.object
<CustomObject>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Billboard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billboards Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>